it/cp/fluent-bit/template.yaml
---
# Source: fluent-bit/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-fluentbit-fluent-bit
  labels:
    helm.sh/chart: fluent-bit-0.20.1
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/instance: it-fluentbit
    app.kubernetes.io/version: "1.9.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 2020
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/instance: it-fluentbit
---
# Source: fluent-bit/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-fluentbit-fluent-bit
  labels:
    helm.sh/chart: fluent-bit-0.20.1
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/instance: it-fluentbit
    app.kubernetes.io/version: "1.9.3"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: fluent-bit
      app.kubernetes.io/instance: it-fluentbit
  template:
    metadata:
      annotations:
        checksum/config: 486a97d8ef193b2bccda4a03a01817430bbd78f7e019b915e1a5bb72fc982c0c
        checksum/luascripts: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app.kubernetes.io/name: fluent-bit
        app.kubernetes.io/instance: it-fluentbit
    spec:
      serviceAccountName: it-fluentbit-fluent-bit
      hostNetwork: false
      dnsPolicy: ClusterFirst
      containers:
        - name: fluent-bit
          image: "cr.fluentbit.io/fluent/fluent-bit:1.9.3"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 2020
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: http
          volumeMounts:
            - mountPath: /fluent-bit/etc/fluent-bit.conf
              name: config
              subPath: fluent-bit.conf
            - mountPath: /fluent-bit/etc/custom_parsers.conf
              name: config
              subPath: custom_parsers.conf
      volumes:
        - name: config
          configMap:
            name: it-fluentbit-fluent-bit
---
# Source: fluent-bit/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-fluentbit-fluent-bit
  labels:
    helm.sh/chart: fluent-bit-0.20.1
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/instance: it-fluentbit
    app.kubernetes.io/version: "1.9.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - "it-fluentbit.cp.lsst.org"
      secretName: fluentbit-tls
  rules:
    - host: "it-fluentbit.cp.lsst.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-fluentbit-fluent-bit
                port:
                  number: 2020
